<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/grey"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:padding="15dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/REG_logo"
                android:src="@drawable/ic_launcher"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/REG_welcome"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                style="@style/Title2TextStyleBlack"
                android:layout_below="@id/REG_logo"
                android:text="@string/hello_world"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/REG_text"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/REG_welcome"
                android:text="@string/enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:id="@+id/REG_lay1"
                android:layout_width="match_parent"
                android:layout_below="@id/REG_text"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/REG_editFirstName"
                    android:layout_width="match_parent"
                    android:hint="@string/enter_first"
                    android:inputType="textCapWords"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/REG_editLastName"
                    android:layout_width="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_below="@id/REG_editFirstName"
                    android:hint="@string/enter_last"
                    android:inputType="textCapWords"
                    android:layout_height="wrap_content" />


            </RelativeLayout>

            <Spinner
                android:id="@+id/REG_spinner"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/REG_lay1" />

            <Button
                android:id="@+id/REG_btn"
                android:text="@string/send"
                android:layout_below="@id/REG_spinner"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>